--- a/index.html
+++ b/index.html
@@ -13,29 +13,39 @@
     <nav class="navigation">
         nav
     </nav>
-    <main class="main">
-        main
-   </main>
     <div class="left-option">
-        <!-- <div><i class="fab fa-twitter"></i></div> -->
+        <!-- <div class="logo"><i class="fab fa-twitter"></i></div> -->
         <ul class="left-container">
-            <li class="options"><i class="fab fa-twitter"></i></li>
-            <li class="options"><i class="fas twi fa-home"></i><span class="list-names">Home</span></li>
-            <li class="options"><i class="fas twi fa-hashtag"></i><span class="list-names">Explore</span></li>
-            <li class="options"><i class="far twi fa-bell"></i><span class="list-names">Notification</span></li>
-            <li class="options"><i class="far twi fa-envelope"></i><span class="list-names">Messages</span></li>
-            <li class="options"><i class="far twi fa-bookmark"></i><span class="list-names">Bookmarks</span></li>
+            <li class="options logo"><i class="fab fa-twitter"></i></li>
+            <li class="options menu"><i class="fas twi fa-home"></i><span class="list-names">Home</span></li>
+            <li class="options menu"><i class="fas twi fa-hashtag"></i><span class="list-names">Explore</span></li>
+            <li class="options menu"><i class="far twi fa-bell"></i><span class="list-names">Notifications</span></li>
+            <li class="options menu"><i class="far twi fa-envelope"></i><span class="list-names">Messages</span></li>
+            <li class="options menu"><i class="far twi fa-bookmark"></i><span class="list-names">Bookmarks</span></li>
 
-            <li class="options"><i class="fas twi fa-align-left"></i><span class=""><span class="list-names">Lists</span></span></span></li>
+            <li class="options menu"><i class="fas twi fa-align-left"></i><span class=""><span class="list-names">Lists</span></span></span></li>
 
-            <li class="options"><i class="far twi fa-user"></i><span class="list-names">Profile</span></li>
+            <li class="options menu"><i class="far twi fa-user"></i><span class="list-names">Profile</span></li>
 
-            <li class="options"><i class="fas twi fa-ellipsis-h"></i><span class="list-names">More</span></li>
+            <li class="options menu"><i class="fas twi fa-ellipsis-h"></i><span class="list-names">More</span></li>
         </ul>
         <div class="tweet">Tweet</div>
 
+        <div class="user-details">
+            <img src="twitterUserPhoto.jpg" alt="userPhoto" class="userPhoto">
+            <div class="username">
+            <h2>Ijas mohammed <i class="fas fa-lock"></i></h2>
+            <p>@iamijas14</p>
+            <span>...</span>
+            </div>
+        </div>
+</div>
 
-    </div>
+
+<main class="main">
+    main
+</main>
+
     <div class="right-option">
         right
     </div>
