--- a/index.html
+++ b/index.html
@@ -53,6 +53,54 @@
         <button>Tweet</button></p>
     </div>
     <div class="break"></div>
+
+    <div class="contents">
+        <img src="marvel.jpg" alt="marvel logo" class="photoTweet marvel">
+        <p class="marvelName"><span class="marvelSd">Marvel Studios</span> <span class="marvelId">@MarvelStudios · Mar 14, 2019</span><span class="dots">...</span><br/>
+            </p>
+
+            <p class="marvelName title"> Whatever it takes. Watch the brand-new trailer for Marvel Studios’<br/><span style="color:rgb(29, 161, 242)">#AvengersEndgame</span>. In theaters April 26.</p>
+
+
+        <div class="videoContainer">
+        <video autoplay loop muted controls type="video/mp4" class="video">
+            <source src="Endgame.mp4">
+        </video>
+    </div>
+    
+    <div class="likes">
+        <i class="m far fa-comment"><span>7.1k</span></i>
+        <i class="m mm fas fa-retweet "><span style="font-weight:normal;">240.1k</span></i>
+        <i class="m far fa-heart"><span>332.1k</span></i>
+        <i class="m mm fas fa-upload "></i>
+    </div>
+</div>
+<div class="border"></div>
+
+<div class="contents">
+    <img src="dc.jpg" alt="marvel logo" class="photoTweet marvel dc">
+    <p class="marvelName"><span class="marvelSd">Dc Comics</span> <span class="marvelId">@DcComics · Mar 14, 2020</span><span class="dots">...</span><br/>
+        </p>
+
+        <p class="marvelName title"> Excited to share the very first look at our official <span style="color:rgb(29, 161, 242)">#TheBatman</span> logo, and <br/> some very cool additional <span style="color:rgb(29, 161, 242)">#DCFanDome</span> artwork by the amazing 
+            <span style="color:rgb(29, 161, 242)">@jimlee</span><br/>
+             — see more of #TheBatman at the  #DCFanDome global event in the Hall of<br/> Heroes this Saturday, 8/22!  <span style="color:rgb(29, 161, 242)">#TheBatman</span> <span style="color:rgb(29, 161, 242)">#DCFanDome</span> <span style="color:rgb(29, 161, 242)">#ForTheFans</span></p>
+
+
+             <div class="batman">
+                <img src="batman.jpg" alt="batman" class="bat1">
+                <img src="batmanlogo.jpg" alt="comic" class="bat2">
+             </div>
+
+             <div class="likes">
+                <i class="b far fa-comment"><span>2.3k</span></i>
+                <i class="b mm fas fa-retweet "><span style="font-weight:normal;">37.5k</span></i>
+                <i class="b far fa-heart"><span>90.5k</span></i>
+                <i class="b mm fas fa-upload "></i>
+            </div>
+             
+</div>
+
 </main>
 
 <div class="right-option">
