--- a/index.html
+++ b/index.html
@@ -60,16 +60,13 @@
 
             <p class="marvelName title"> Whatever it takes. Watch the brand-new trailer for Marvel Studios’<br/><span style="color:rgb(29, 161, 242)">#AvengersEndgame</span>. In theaters April 26.</p>
 
-
-        <div class="videoContainer">
         <video autoplay loop muted controls type="video/mp4" class="video">
             <source src="Endgame.mp4">
         </video>
-    </div>
     
     <div class="likes">
         <i class="m far fa-comment"><span>7.1k</span></i>
-        <i class="m mm fas fa-retweet "><span style="font-weight:normal;">240.1k</span></i>
+        <i class="m mm fas fa-retweet "><span style="font-weight:500;">240.1k</span></i>
         <i class="m far fa-heart"><span>332.1k</span></i>
         <i class="m mm fas fa-upload "></i>
     </div>
@@ -93,7 +90,7 @@
 
              <div class="likes">
                 <i class="b far fa-comment"><span>2.3k</span></i>
-                <i class="b mm fas fa-retweet "><span style="font-weight:normal;">37.5k</span></i>
+                <i class="b mm fas fa-retweet "><span style="font-weight:500;">37.5k</span></i>
                 <i class="b far fa-heart"><span>90.5k</span></i>
                 <i class="b mm fas fa-upload "></i>
             </div>
